force-app/main/default/objects/S__c/fields/Formation_Year__c.field-meta.xml
<CustomField>
    <fullName>Formation_Year__c</fullName>
    <defaultValue>2022</defaultValue>
    <label>Formation Year</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>