force-app/main/default/objects/S__c/fields/Registration_Code__c.field-meta.xml
<CustomField>
    <fullName>Registration_Code__c</fullName>
    <label>Registration Code</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>