force-app/main/default/objects/S__c/fields/Secretary__c.field-meta.xml
<CustomField>
    <fullName>Secretary__c</fullName>
    <label>Secretary</label>
    <length>25</length>
    <type>Text</type>
</CustomField>