force-app/main/default/objects/S__c/recordTypes/Garden_Apartments.recordType-meta.xml
<RecordType>
    <fullName>Garden_Apartments</fullName>
    <active>true</active>
    <label>Garden Apartments</label>
</RecordType>