force-app/main/default/objects/S__c/recordTypes/Studio_Apartments.recordType-meta.xml
<RecordType>
    <fullName>Studio_Apartments</fullName>
    <active>true</active>
    <label>Studio Apartments</label>
</RecordType>